Fix crashes when close an audio cd project

BUG: 381863